<resources>
    <string name="app_name">Roomie</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Nihal Vithanage</string>
    <string name="nav_header_subtitle">nihal.v@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_bookings">My Bookings</string>
    <string name="menu_properties">My Properties</string>
    <string name="menu_reviews">My Reviews</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>
    <string name="menu_logout">Logout</string>

    <string name="title_activity_propert_view">PropertView</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_property">PropertyActivity</string>

    <string name="c_title_saved">Saved</string>
    <string name="c_title_bookings">My Bookings</string>
    <string name="c_title_mprop">My Properties</string>
    <string name="c_title_reviews">My Reviews</string>
    <string name="c_title_settings">Settings</string>
    <string name="c_title_aprop">Add Property</string>
    <string name="c_title_conbooking">Confirm Booking</string>
    <string name="c_title_payment">Confirm Payment</string>
    <string name="c_title_reviews_main">Reviews</string>
    <string name="c_title_reviews_add">Add Review</string>

    <string name="input_email">Email</string>
    <string name="log_f_name">First Name</string>
    <string name="log_l_name">Last Name</string>
    <string name="log_pass_c">Confirm Password</string>
    <string name="hostel_name">JSS Hostel</string>
    <string name="text_call">CALL</string>
    <string name="text_reviews">Reviews</string>
    <string name="text_direction">DIRECTION</string>
    <string name="text_address">Address</string>
    <string name="text_address_line">No. 35, Samanalapura Lane, Malabe</string>
    <string name="text_ac">A/C</string>
    <string name="text_wifi">Wi-Fi</string>
    <string name="text_laundry">Laundry</string>
    <string name="text_facilities">Facilities</string>
    <string name="text_bed_1">Rs. 19500</string>
    <string name="text_bed_2">Rs. 10500</string>
    <string name="text_book_bar">BOOK</string>
    <string name="text_bed_room_3">Triple Room</string>
    <string name="text_bed_room_1">Single Room</string>
    <string name="text_bed_room_2">Double Room</string>
    <string name="text_room_types">Room Types</string>
    <string name="text_bed3">Rs. 6500</string>
    <string name="text_rule_1">The owner must be informed 15 days prior vacating.</string>
    <string name="text_rule_2">The rent must be paid on or before the 10th of each month.</string>
    <string name="text_rules">Rules</string>
    <string name="text_loc_main">Malabe</string>
    <string name="text_district_fill">District</string>
    <string name="text_city_fill">City</string>
    <string name="text_rev_1"><i>Loved the 6 month stay here. Highly recommended!</i></string>
    <string name="text_password">Password</string>
    <string name="img_b_f">TODO</string>
    <string name="text_save_cap">SAVE</string>
    <string name="text_email">EMAIL</string>
    <string name="text_f_name_cap">FIRST NAME</string>
    <string name="text_l_name_cap">LAST NAME</string>
    <string name="text_password_cap">PASSWORD</string>
    <string name="text_cpass_cap">CONFIRM PASSWORD</string>
    <string name="img_b_m">TODO</string>
    <string name="text_hostel_name_def">Name</string>
    <string name="text_gender">Gender</string>
    <string name="text_hostel_name">Hostel Name</string>
    <string name="text_add_line_1">Line 1</string>
    <string name="text_address_line2">Line 2</string>
    <string name="txt_b_upload">UPLOAD</string>
    <string name="text_images">Images</string>
    <string name="text_img_up_guide">Upload up to 5 images.</string>
    <string name="text_cancel_cap">CANCEL</string>
    <string name="text_type_head">Type</string>
    <string name="text_rooms_head">Rooms</string>
    <string name="text_room_price">Price</string>
    <string name="text_parking">Parking</string>
    <string name="img_add_1">Add Button</string>
    <string name="text_sign_in_cap">SIGN IN</string>
    <string name="text_log_in_title">Log in to Roomie.</string>
    <string name="text_sign_up_cap">SIGN UP</string>
    <string name="text_create_acc">Create your account.</string>
    <string name="text_o_rating">Overall Rating</string>
    <string name="text_rating">Rating:</string>
    <string name="text_added_rating">5</string>
    <string name="text_create_acc_non_cap">Create Account</string>
    <string name="text_wc">See the places around you right now.</string>
    <string name="text_have_acc">Have an account?</string>
    <string name="text_hac_all">Have an account already?</string>
    <string name="text_sign_in">Sign in</string>
    <string name="text_filter">Filter</string>
    <string name="text_sort">Sort</string>
    <string name="text_map_1">MAP</string>
    <string name="text_map_2">MAP</string>
    <string name="text_view_cap">VIEW</string>
    <string name="text_bd">Booking Details</string>
    <string name="text_loc_2">Location</string>
    <string name="text_room_type_s">Room Type</string>
    <string name="text_cin_date">Check-in Date</string>
    <string name="text_choose_date">Choose date</string>
    <string name="text_tot_amount">Total Amount</string>
    <string name="text_female">Female</string>
    <string name="text_noc">NAME ON CARD</string>
    <string name="text_cn">CARD NUMBER</string>
    <string name="text_exp">EXPIRATION</string>
    <string name="text_cvv">CVV</string>
    <string name="text_zip">ZIP</string>
    <string name="text_address_cap">ADDRESS</string>
    <string name="text_add_line_2">Line 2</string>
    <string name="text_zip_hint">12345</string>
    <string name="text_mmyy">MM/YY</string>
    <string name="text_credit_card">1234 5678 9012 3456</string>
    <string name="text_fullname">Full Name</string>
    <string name="text_pay">PAY</string>
    <string name="text_rating_nc">Rating</string>
    <string name="text_ml_write_rev">Write a review.</string>
    <string name="text_submit_cap">SUBMIT</string>
    <string name="text_no1">Number 1</string>
    <string name="text_no2">Number 2</string>
    <string name="additional_info">Additional Info</string>
    <string name="add_line_3">Line 1,</string>
    <string name="txt_desc">Information</string>
    <string name="text_choose">CHOOSE</string>
    <string name="upload_guide">Upload an image.</string>
    <string name="text_delete">DELETE</string>
    <string name="tx_photo">Photo</string>
    <string name="txtChange">Change</string>
    <string name="txtBilling">Billing Details</string>
    <string name="Contact" />
    <string name="Phone_num">Phone No.</string>
    <string name="txt_rese">Reservations</string>

    <string-array name="districts">
        <item>Colombo</item>
        <item>Gampaha</item>
        <item>Kalutara</item>
    </string-array>

    <string-array name="roomtypes">
        <item>Single</item>
        <item>Double</item>
        <item>Triple</item>
        <item>Quadruple</item>
        <item>Other</item>
    </string-array>

</resources>
