<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_book"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_bookings" />
        <item
            android:id="@+id/nav_prop"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_properties" />
        <item
            android:id="@+id/nav_reviews"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_reviews" />
        <item
            android:id="@+id/nav_save"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="Saved" />
    </group>

    <item android:title="Help">
        <menu>
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_about" />
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_settings" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_logout" />
        </menu>
    </item>

</menu>
