<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout5"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_grey"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".view.MainActivity"
    tools:showIn="@layout/app_bar_main">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <EditText
            android:id="@+id/pp_main_opt_dis"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="4dp"
            android:layout_weight="1"
            android:background="@drawable/input_field"
            android:ems="10"
            android:hint="@string/text_district_fill"
            android:inputType="textPersonName"
            android:textColorHint="@color/GoogleGrey" />

        <EditText
            android:id="@+id/pp_main_opt_city"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="8dp"
            android:layout_weight="1"
            android:background="@drawable/input_field"
            android:ems="10"
            android:hint="@string/text_city_fill"
            android:inputType="textPersonName"
            android:textColorHint="@color/GoogleGrey" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="2dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">


        <Button
            android:id="@+id/pp_main_bt_filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:height="30dp"
            android:background="@drawable/button_pp_up"
            android:text="@string/text_filter"
            android:textColor="@color/GoogleBlue" />

        <Button
            android:id="@+id/pp_main_bt_sort"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:height="30dp"
            android:background="@drawable/button_pp_up"
            android:text="@string/text_sort"
            android:textColor="@color/GoogleBlue" />

        <Button
            android:id="@+id/pp_main_bt_navmap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:height="30dp"
            android:background="@drawable/button_pp_up"
            android:text="@string/text_map_2"
            android:textColor="@color/GoogleBlue" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/propReView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

</androidx.constraintlayout.widget.ConstraintLayout>